--- a/index.html
+++ b/index.html
@@ -13,7 +13,34 @@
 </head>
 
 <body>
-
+    <main class="container">
+        <div class="inputs">
+            <ul>
+                <li><p>Day</p></li>
+                <li><input type="text" placeholder="DD"></li>
+                <li><p class="error"></p></li>
+            </ul>
+            <ul>
+                <li><p>Month</p></li>
+                <li><input type="text" placeholder="MM"></li>
+                <li><p class="error"></p></li>
+            </ul>
+            <ul>
+                <li><p>Year</p></li>
+                <li><input type="text" placeholder="YYYY"></li>
+                <li><p class="error"></p></li>
+            </ul>
+        </div>
+        <div class="bar">
+            <hr>
+            <img src="./src/images/icon-arrow.svg" alt="arrow">
+        </div>
+        <ul>
+            <li><p><span class="span-years">- -</span> years</p></li>
+            <li><p><span class="span-months">- -</span> months</p></li>
+            <li><p><span class="span-days">- -</span> days</p></li>
+        </ul>
+    </main>
     <script src="./src/js/index.js"></script>
 </body>
 
