--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <main class="container">
         <div class="card">
             <div class="inputs">
-                <ul>
+                <ul class="input">
                     <li>
                         <p>Day</p>
                     </li>
                     <li><input type="text" placeholder="DD"></li>
                     <li>
-                        <p class="error"></p>
+                        <p></p>
                     </li>
                 </ul>
-                <ul>
+                <ul class="input">
                     <li>
                         <p>Month</p>
                     </li>
@@ -34,7 +34,7 @@
                         <p class="error"></p>
                     </li>
                 </ul>
-                <ul>
+                <ul class="input">
                     <li>
                         <p>Year</p>
                     </li>
